fixed CSS to make arrows visible

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body::before {
 .slide {
   opacity: 0;
   height: 100vh;
-  width: 100vh;
+  width: 100vw;
   background-position: center center;
   background-size: cover;
   position: absolute;
@@ -74,9 +74,9 @@ body::before {
 }
 
 .left-arrow {
-  left: calc(15vw-65px);
+  left: calc(15vw - 65px);
 }
 
 .right-arrow {
-  right: calc(15vw-65px);
+  right: calc(15vw - 65px);
 }
